# MSV

./: CMakeLists.txt  README.md  a.out  main.cpp  run  run.c  src.msv  test.msv  tets.msv
ALU/: ALU.cpp  ALU.h
AST/: Ast.h
Function/: function.h  function_table.cpp  function_table.h
GSyntax_Analyser/: GSyntax_Analyzer.cpp  GSyntax_Analyzer.h
GTable/: GTable.cpp  GTable.h
GeneralTypes/BaseTypes/: BaseType.cpp  BaseType.h
GeneralTypes/TypeController/: TypeController.cpp  TypeController.h
Global_Tokenizer/: GTable.h  GTokenizer.cpp
Includes/: Liabrary.h
KeywordCheck/: keyword_checking.cpp  keyword_checking.h
Keywords/: Keyword.cpp  Keyword.h  Keywords.cpp  Keywords.h
MSV/: source.mvs
MSV/Main/: main.cpp
MSV_ORIGIN/: a.out  tttt
MSV_ORIGIN/Includes/: Liabrary.h
MSV_ORIGIN/InputOutput/: InputOutput.cpp  InputOutput.h
MSV_ORIGIN/Keywords/: Keyword.h  Keywords.cpp
MSV_ORIGIN/Main/: main.cpp  test.msv
MSV_ORIGIN/SyntaxAnaliys/: Syntax.cpp  Syntax.h
MSV_ORIGIN/Table/: Table.cpp  Table.h
Main/: main.cpp  test.msv
ResolveExpression/: ResolveExpression.cpp  ResolveExpression.h
Statments/Function/: Function.h
Statments/If_Else_/: If_Else.cpp  If_Else.h
Statments/Loops/: For.cpp  For.h  While.cpp  While.h
SyntaxAnaliys/: Syntax.cpp  Syntax.h
Table/: Table.cpp  Table.h
Tokenizing/: Keyword.cpp  Keywords.h  Liabrary.h  Table.cpp  Table.h  Tokenizing.cpp  Tokenizing.h
Type/Array/: Array.cpp  Array.h
Type/Bool/: Bool.cpp  Bool.h
Types/: BaseType.cpp  BaseType.h
Unended_changes/: Table.cpp
newMSV/: a.out  test.msv
(+46 files in other folders)
